--- a/src/css/components/_medias.scss
+++ b/src/css/components/_medias.scss
@@ -159,6 +159,11 @@
     font-size: 18px;
   }
 
+  .navbar-dark .navbar-nav .nav-link:hover,
+  .navbar-dark .navbar-nav .nav-link:focus{
+    color: $color-base-b;
+  }
+
   .navbar .nav-item{
     font-size: 14px;
     font-family: $font-pnr;
